jS-Strict-Mode/Examples/example5.js
// Using an object, without declaring it, is not allowed
"use strict";
x = { p1: 10, p2: 20 };
// ReferenceError: x is not defined